--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "UNSPLASH_API_URL", '"https://api.unsplash.com/"'
         buildConfigField "String", "UNSPLASH_CLIENT_ID", '"5fe66adbcb966a5c1e813074b67f364731f8d07f752f9a95b0ef52761be59fe2"'
-        buildConfigField "String", "UNSPLASH_CLIENT_SECERET", '"f0561de0466f105045a4fd455224ba87a77d76e3b8b9a7278ee7b8f91966aee72"'
+        buildConfigField "String", "UNSPLASH_CLIENT_SECERET", '"f0561de0466f105045a4fd455224ba87a77d76e3b8b9a7278ee7b8f91966aee7"'
         buildConfigField "String", "UNSPLASH_REDIRECT_URI", '"urn:ietf:wg:oauth:2.0:oob"'
     }
     buildTypes {
@@ -26,7 +26,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -56,9 +55,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.4.0@aar'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
     /* implementation 'com.android.support:palette-v7:28.0.0'
 
 
 
-     implementation 'de.hdodenhof:circleimageview:3.0.0'*/
+     */
 }
