--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,15 +7,16 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.itrexgroup.photos"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "UNSPLASH_API_URL", '"https://api.unsplash.com/"'
+        buildConfigField "String", "UNSPLASH_LOGIN_URL", '"https://unsplash.com/"'
         buildConfigField "String", "UNSPLASH_CLIENT_ID", '"5fe66adbcb966a5c1e813074b67f364731f8d07f752f9a95b0ef52761be59fe2"'
         buildConfigField "String", "UNSPLASH_CLIENT_SECERET", '"f0561de0466f105045a4fd455224ba87a77d76e3b8b9a7278ee7b8f91966aee7"'
         buildConfigField "String", "UNSPLASH_REDIRECT_URI", '"urn:ietf:wg:oauth:2.0:oob"'
@@ -55,9 +56,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.4.0@aar'
-    /* implementation 'com.android.support:palette-v7:28.0.0'
-
-
-
-     */
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
 }
