--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.8.0@aar'
     implementation "android.arch.persistence.room:runtime:1.1.1"
     kapt "android.arch.persistence.room:compiler:1.1.1"
-    implementation "android.arch.paging:runtime:1.0.1"
+    implementation 'androidx.paging:paging-runtime-ktx:2.1.0'
 }
