--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.google.android.material:material:1.1.0-alpha08'
     implementation 'org.koin:koin-android:1.0.2'
-    implementation 'org.koin:koin-androidx-scope:1.0.2'
     implementation 'org.koin:koin-androidx-viewmodel:1.0.2'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
@@ -59,5 +58,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.8.0@aar'
     implementation "android.arch.persistence.room:runtime:1.1.1"
     kapt "android.arch.persistence.room:compiler:1.1.1"
-    implementation 'androidx.paging:paging-runtime-ktx:2.1.0'
+    implementation "android.arch.persistence.room:rxjava2:1.1.1"
 }
